<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GC1Laboratorio2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="saudacao">Seja Bem-Vindo ao ImobDroid</string>
    <string name="botao_entrar">Entrar</string>
    <string name="botao_limpar">Limpar</string>
    <string name="logo">logo</string>
    <string name="nome">Nome:</string>
    <string name="senha">Senha:</string>

</resources>
