<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gc1laboratorio2.MainActivity" >

    <TextView
        android:id="@+id/textSaudacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/saudacao" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nome" />
        
	    <EditText
	        android:id="@+id/editTextNome"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName">
	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/senha" 
            android:layout_marginTop="5dp"/>
	
	    <EditText
	        android:id="@+id/editTextSenha"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" />

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
	        
		    <Button
		        android:id="@+id/buttonLogin"
		        android:layout_width="140dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_alignParentLeft="true"
		        android:text="@string/botao_entrar"/>
	
		    <Button
		        android:id="@+id/buttonLimparLogin"
		        android:layout_width="140dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_alignParentRight="true"
		        android:text="@string/botao_limpar" />
	    </RelativeLayout>
	        
</LinearLayout>